--- a/index.html
+++ b/index.html
@@ -3,105 +3,78 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Register - INVEX THERIUM</title>
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700&display=swap" rel="stylesheet">
-
+  <title>Register - Invex Therium</title>
   <style>
-    body {
-      margin: 0;
-      font-family: 'Orbitron', sans-serif;
-      background-color: black;
-      color: white;
-      text-align: center;
-      padding: 40px 20px;
+    @font-face {
+      font-family: 'Cyberion';
+      src: url('https://files.catbox.moe/1m4mhw.otf') format('opentype');
     }
 
-    .container {
-      margin-top: 40px;
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: 'Cyberion', sans-serif;
+      background: black;
+      color: white;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+    }
+
+    .logo {
+      width: 150px;
+      margin-bottom: 30px;
+      filter: drop-shadow(0 0 10px red);
     }
 
     h1 {
-      font-size: 32px;
-      background: linear-gradient(to right, red, orange);
+      font-size: 36px;
+      background: linear-gradient(90deg, red, orange, yellow);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
-      text-shadow: 0 0 8px red;
-      margin-bottom: 20px;
-    }
-
-    p {
-      color: #aaa;
       margin-bottom: 30px;
+      text-shadow: 0 0 15px red;
     }
 
-    input[type="text"] {
-      padding: 14px;
-      width: 80%;
-      max-width: 320px;
+    input, button {
+      font-family: 'Cyberion', sans-serif;
       font-size: 18px;
-      font-weight: bold;
-      background: #111;
-      color: white;
+      padding: 10px 20px;
+      border-radius: 8px;
       border: 2px solid red;
-      border-radius: 10px;
-      margin-bottom: 20px;
-      box-shadow: 0 0 10px red;
-      outline: none;
+      background-color: black;
+      color: white;
+      margin: 10px 0;
+      width: 250px;
       text-align: center;
     }
 
-    button.register-btn {
+    button {
       background: red;
       color: white;
-      font-weight: bold;
-      font-size: 18px;
-      padding: 12px 28px;
-      border: none;
-      border-radius: 12px;
       cursor: pointer;
-      box-shadow: 0 0 15px red;
       transition: 0.3s;
+      box-shadow: 0 0 10px red;
     }
 
-    button.register-btn:hover {
+    button:hover {
       background: darkred;
     }
 
-    .seller-link {
-      margin-top: 25px;
-      color: orange;
+    .note {
       font-size: 14px;
-    }
-
-    .seller-link a {
-      color: #00ffcc;
-      text-decoration: none;
-    }
-
-    footer {
-      margin-top: 80px;
-      font-size: 12px;
-      opacity: 0.4;
+      color: #ccc;
+      margin-top: 10px;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>REGISTER KEY</h1>
-    <p>Silakan beli key dari seller untuk akses Attack Menu</p>
-
-    <input type="text" placeholder="Username" /><br>
-    <input type="text" placeholder="Enter Your Registration Key" /><br>
-
-    <button class="register-btn">REGISTER</button>
-
-    <div class="seller-link">
-      Belum punya key? <a href="https://wa.me/628xxx">Hubungi Seller di WhatsApp</a>
-    </div>
-
-    <footer>
-      © 2025 INVEX THERIUM
-    </footer>
-  </div>
+  <img src="https://files.catbox.moe/4mk9ev.png" alt="Logo" class="logo" />
+  <h1>REGISTER KEY</h1>
+  <input type="text" placeholder="Enter your KEY" />
+  <button onclick="alert('Silakan hubungi seller untuk membeli key.')">REGISTER</button>
+  <div class="note">Belum punya key? Hubungi seller dulu.</div>
 </body>
 </html>
