--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       background-color: black;
       color: white;
       margin: 10px 0;
-      width: 250px;
+      width: 280px;
       text-align: center;
     }
 
@@ -73,7 +73,10 @@
 <body>
   <img src="https://files.catbox.moe/4mk9ev.png" alt="Logo" class="logo" />
   <h1>REGISTER KEY</h1>
+  
+  <input type="text" placeholder="Enter your Username" />
   <input type="text" placeholder="Enter your KEY" />
+  
   <button onclick="alert('Silakan hubungi seller untuk membeli key.')">REGISTER</button>
   <div class="note">Belum punya key? Hubungi seller dulu.</div>
 </body>
