--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 </head>
 <body>
   <img src="https://files.catbox.moe/4mk9ev.png" alt="Logo" class="logo" />
-  <h1>REGISTER KEY</h1>
+  <h1>ATTACK MENU</h1>
   
   <input type="text" placeholder="Enter your Username" />
   <input type="text" placeholder="Enter your KEY" />
