--- a/index.html
+++ b/index.html
@@ -103,10 +103,10 @@
                 <h3 class="text-3xl font-bold text-gray-800 mb-4 md:mb-0">Produk Terbaru</h3>
                 
                 <div class="flex space-x-2">
-                    <button class="filter-btn px-4 py-2 bg-indigo-600 text-white rounded-full text-sm" data-filter="all">Semua</button>
-                    <button class="filter-btn px-4 py-2 bg-gray-200 text-gray-700 rounded-full text-sm hover:bg-gray-300" data-filter="pakaian">Pakaian</button>
-                    <button class="filter-btn px-4 py-2 bg-gray-200 text-gray-700 rounded-full text-sm hover:bg-gray-300" data-filter="aksesoris">Aksesoris</button>
-                    <button class="filter-btn px-4 py-2 bg-gray-200 text-gray-700 rounded-full text-sm hover:bg-gray-300" data-filter="sepatu">Sepatu</button>
+                    <button class="filter-btn px-4 py-2 bg-indigo-600 text-white rounded-full text-sm" data-filter="all">Panel Pterodactyl</button>
+                    <button class="filter-btn px-4 py-2 bg-gray-200 text-gray-700 rounded-full text-sm hover:bg-gray-300" data-filter="pakaian">Script Bot WhatsApp</button>
+                    <button class="filter-btn px-4 py-2 bg-gray-200 text-gray-700 rounded-full text-sm hover:bg-gray-300" data-filter="aksesoris">Nokos WhatsApp</button>
+                    <button class="filter-btn px-4 py-2 bg-gray-200 text-gray-700 rounded-full text-sm hover:bg-gray-300" data-filter="sepatu">Nokos Telegram</button>
                 </div>
             </div>
             
