--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                         <div class="absolute top-2 right-2 bg-pink-500 text-white text-xs px-2 py-1 rounded">New</div>
                     </div>
                     <div class="p-5">
-                        <h4 class="text-lg font-semibold text-gray-800 mb-2">Oversized Tee</h4>
+                        <h4 class="text-lg font-semibold text-gray-800 mb-2">Panel 1 GB</h4>
                         <div class="flex items-center mb-3">
                             <div class="flex text-yellow-400">
                                 <span>&#9733;</span>
@@ -127,10 +127,10 @@
                                 <span>&#9733;</span>
                                 <span>&#9733;</span>
                             </div>
-                            <span class="text-gray-500 text-sm ml-2">(128)</span>
+                            <span class="text-gray-500 text-sm ml-2">(30)</span>
                         </div>
                         <div class="flex justify-between items-center">
-                            <span class="text-lg font-bold text-indigo-600">Rp 149.000</span>
+                            <span class="text-lg font-bold text-indigo-600">Rp 1.000</span>
                             <button class="add-to-cart bg-indigo-600 text-white px-4 py-2 rounded-full text-sm hover:bg-indigo-700" data-id="1">+ Keranjang</button>
                         </div>
                     </div>
@@ -142,7 +142,7 @@
                         <img src="https://placehold.co/400x400" alt="Tas selempang mini warna hitam dengan rantai metalik dan detail hardware" class="w-full h-64 object-cover">
                     </div>
                     <div class="p-5">
-                        <h4 class="text-lg font-semibold text-gray-800 mb-2">Mini Crossbag</h4>
+                        <h4 class="text-lg font-semibold text-gray-800 mb-2">Panel 2 GB</h4>
                         <div class="flex items-center mb-3">
                             <div class="flex text-yellow-400">
                                 <span>&#9733;</span>
@@ -151,10 +151,10 @@
                                 <span>&#9733;</span>
                                 <span>&#9733;</span>
                             </div>
-                            <span class="text-gray-500 text-sm ml-2">(87)</span>
+                            <span class="text-gray-500 text-sm ml-2">(45)</span>
                         </div>
                         <div class="flex justify-between items-center">
-                            <span class="text-lg font-bold text-indigo-600">Rp 299.000</span>
+                            <span class="text-lg font-bold text-indigo-600">Rp 2.000</span>
                             <button class="add-to-cart bg-indigo-600 text-white px-4 py-2 rounded-full text-sm hover:bg-indigo-700" data-id="2">+ Keranjang</button>
                         </div>
                     </div>
@@ -167,7 +167,7 @@
                         <div class="absolute top-2 right-2 bg-red-500 text-white text-xs px-2 py-1 rounded">Sale</div>
                     </div>
                     <div class="p-5">
-                        <h4 class="text-lg font-semibold text-gray-800 mb-2">Chunky Sneakers</h4>
+                        <h4 class="text-lg font-semibold text-gray-800 mb-2">Panel 3 GB</h4>
                         <div class="flex items-center mb-3">
                             <div class="flex text-yellow-400">
                                 <span>&#9733;</span>
@@ -176,11 +176,11 @@
                                 <span>&#9733;</span>
                                 <span>&#9734;</span>
                             </div>
-                            <span class="text-gray-500 text-sm ml-2">(64)</span>
+                            <span class="text-gray-500 text-sm ml-2">(55)</span>
                         </div>
                         <div class="flex justify-between items-center">
                             <div>
-                                <span class="text-lg font-bold text-indigo-600">Rp 459.000</span>
+                                <span class="text-lg font-bold text-indigo-600">55</span>
                                 <span class="text-sm text-gray-500 line-through ml-2">Rp 599.000</span>
                             </div>
                             <button class="add-to-cart bg-indigo-600 text-white px-4 py-2 rounded-full text-sm hover:bg-indigo-700" data-id="3">+ Keranjang</button>
