--- a/index.html
+++ b/index.html
@@ -180,9 +180,7 @@
                         </div>
                         <div class="flex justify-between items-center">
                             <div>
-                                <span class="text-lg font-bold text-indigo-600">55</span>
-                                <span class="text-sm text-gray-500 line-through ml-2">Rp 599.000</span>
-                            </div>
+                                <span class="text-lg font-bold text-indigo-600">Rp 3.000</span>
                             <button class="add-to-cart bg-indigo-600 text-white px-4 py-2 rounded-full text-sm hover:bg-indigo-700" data-id="3">+ Keranjang</button>
                         </div>
                     </div>
