--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                         <img src="https://placehold.co/400x400" alt="Celana cargo oversized warna khaki dengan banyak kantong dan tali pinggang adjuster" class="w-full h-64 object-cover">
                     </div>
                     <div class="p-5">
-                        <h4 class="text-lg font-semibold text-gray-800 mb-2">Cargo Pants</h4>
+                        <h4 class="text-lg font-semibold text-gray-800 mb-2">Panel 4 GB</h4>
                         <div class="flex items-center mb-3">
                             <div class="flex text-yellow-400">
                                 <span>&#9733;</span>
@@ -203,10 +203,10 @@
                                 <span>&#9733;</span>
                                 <span>&#9733;</span>
                             </div>
-                            <span class="text-gray-500 text-sm ml-2">(112)</span>
+                            <span class="text-gray-500 text-sm ml-2">(70)</span>
                         </div>
                         <div class="flex justify-between items-center">
-                            <span class="text-lg font-bold text-indigo-600">Rp 349.000</span>
+                            <span class="text-lg font-bold text-indigo-600">Rp 4.000</span>
                             <button class="add-to-cart bg-indigo-600 text-white px-4 py-2 rounded-full text-sm hover:bg-indigo-700" data-id="4">+ Keranjang</button>
                         </div>
                     </div>
@@ -219,7 +219,7 @@
                         <div class="absolute top-2 right-2 bg-yellow-500 text-white text-xs px-2 py-1 rounded">Best Seller</div>
                     </div>
                     <div class="p-5">
-                        <h4 class="text-lg font-semibold text-gray-800 mb-2">Minimalist Watch</h4>
+                        <h4 class="text-lg font-semibold text-gray-800 mb-2">Panel 5 GB</h4>
                         <div class="flex items-center mb-3">
                             <div class="flex text-yellow-400">
                                 <span>&#9733;</span>
@@ -228,10 +228,10 @@
                                 <span>&#9733;</span>
                                 <span>&#9733;</span>
                             </div>
-                            <span class="text-gray-500 text-sm ml-2">(243)</span>
+                            <span class="text-gray-500 text-sm ml-2">(85)</span>
                         </div>
                         <div class="flex justify-between items-center">
-                            <span class="text-lg font-bold text-indigo-600">Rp 389.000</span>
+                            <span class="text-lg font-bold text-indigo-600">Rp 5.000</span>
                             <button class="add-to-cart bg-indigo-600 text-white px-4 py-2 rounded-full text-sm hover:bg-indigo-700" data-id="5">+ Keranjang</button>
                         </div>
                     </div>
@@ -243,7 +243,7 @@
                         <img src="https://placehold.co/400x400" alt="Hoodie oversized warna abu-abu dengan print grafis di bagian depan" class="w-full h-64 object-cover">
                     </div>
                     <div class="p-5">
-                        <h4 class="text-lg font-semibold text-gray-800 mb-2">Graphic Hoodie</h4>
+                        <h4 class="text-lg font-semibold text-gray-800 mb-2">Panel 6GB</h4>
                         <div class="flex items-center mb-3">
                             <div class="flex text-yellow-400">
                                 <span>&#9733;</span>
@@ -252,10 +252,10 @@
                                 <span>&#9733;</span>
                                 <span>&#9734;</span>
                             </div>
-                            <span class="text-gray-500 text-sm ml-2">(76)</span>
+                            <span class="text-gray-500 text-sm ml-2">(95)</span>
                         </div>
                         <div class="flex justify-between items-center">
-                            <span class="text-lg font-bold text-indigo-600">Rp 279.000</span>
+                            <span class="text-lg font-bold text-indigo-600">Rp 6.000</span>
                             <button class="add-to-cart bg-indigo-600 text-white px-4 py-2 rounded-full text-sm hover:bg-indigo-700" data-id="6">+ Keranjang</button>
                         </div>
                     </div>
@@ -267,7 +267,7 @@
                         <img src="https://placehold.co/400x400" alt="Sepatu boots kulit hitam dengan sol karet tebal dan gaya militar" class="w-full h-64 object-cover">
                     </div>
                     <div class="p-5">
-                        <h4 class="text-lg font-semibold text-gray-800 mb-2">Combat Boots</h4>
+                        <h4 class="text-lg font-semibold text-gray-800 mb-2">Panel 7 GB</h4>
                         <div class="flex items-center mb-3">
                             <div class="flex text-yellow-400">
                                 <span>&#9733;</span>
@@ -276,10 +276,10 @@
                                 <span>&#9733;</span>
                                 <span>&#9733;</span>
                             </div>
-                            <span class="text-gray-500 text-sm ml-2">(95)</span>
+                            <span class="text-gray-500 text-sm ml-2">(110)</span>
                         </div>
                         <div class="flex justify-between items-center">
-                            <span class="text-lg font-bold text-indigo-600">Rp 549.000</span>
+                            <span class="text-lg font-bold text-indigo-600">Rp 7.000</span>
                             <button class="add-to-cart bg-indigo-600 text-white px-4 py-2 rounded-full text-sm hover:bg-indigo-700" data-id="7">+ Keranjang</button>
                         </div>
                     </div>
@@ -292,7 +292,7 @@
                         <div class="absolute top-2 right-2 bg-green-500 text-white text-xs px-2 py-1 rounded">Limited</div>
                     </div>
                     <div class="p-5">
-                        <h4 class="text-lg font-semibold text-gray-800 mb-2">Square Sunglasses</h4>
+                        <h4 class="text-lg font-semibold text-gray-800 mb-2">Panel 8 GB</h4>
                         <div class="flex items-center mb-3">
                             <div class="flex text-yellow-400">
                                 <span>&#9733;</span>
@@ -301,10 +301,10 @@
                                 <span>&#9733;</span>
                                 <span>&#9734;</span>
                             </div>
-                            <span class="text-gray-500 text-sm ml-2">(58)</span>
+                            <span class="text-gray-500 text-sm ml-2">(125)</span>
                         </div>
                         <div class="flex justify-between items-center">
-                            <span class="text-lg font-bold text-indigo-600">Rp 229.000</span>
+                            <span class="text-lg font-bold text-indigo-600">Rp 8.000</span>
                             <button class="add-to-cart bg-indigo-600 text-white px-4 py-2 rounded-full text-sm hover:bg-indigo-700" data-id="8">+ Keranjang</button>
                         </div>
                     </div>
