--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Toko Online Kekinian</title>
+    <title>Marketrexzzofficial</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
@@ -52,7 +52,7 @@
         <div class="container mx-auto px-4 py-4 flex justify-between items-center">
             <div class="flex items-center space-x-2">
                 <img src="https://placehold.co/40x40" alt="Logo toko online berbentuk lingkaran dengan gradasi warna ungu dan pink" class="rounded-full">
-                <h1 class="text-xl font-bold text-indigo-700">KECE<span class="text-pink-500">STORE</span></h1>
+                <h1 class="text-xl font-bold text-indigo-700">MARKET REXZZ<span class="text-pink-500">OFFICIAL</span></h1>
             </div>
             
             <nav class="hidden md:flex space-x-8">
