--- a/index.html
+++ b/index.html
@@ -472,14 +472,14 @@
         
         // Products data
         const products = {
-            1: { name: 'Oversized Tee', price: 149000, image: 'https://placehold.co/100x100' },
-            2: { name: 'Mini Crossbag', price: 299000, image: 'https://placehold.co/100x100' },
-            3: { name: 'Chunky Sneakers', price: 459000, image: 'https://placehold.co/100x100' },
-            4: { name: 'Cargo Pants', price: 349000, image: 'https://placehold.co/100x100' },
-            5: { name: 'Minimalist Watch', price: 389000, image: 'https://placehold.co/100x100' },
-            6: { name: 'Graphic Hoodie', price: 279000, image: 'https://placehold.co/100x100' },
-            7: { name: 'Combat Boots', price: 549000, image: 'https://placehold.co/100x100' },
-            8: { name: 'Square Sunglasses', price: 229000, image: 'https://placehold.co/100x100' }
+            1: { name: 'Panel 1 GB', price: 1000, image: 'https://placehold.co/100x100' },
+            2: { name: 'Panel 2 GB', price: 2000, image: 'https://placehold.co/100x100' },
+            3: { name: 'Panel 3 GB', price: 3000, image: 'https://placehold.co/100x100' },
+            4: { name: 'Panel 4 GB', price: 4000, image: 'https://placehold.co/100x100' },
+            5: { name: 'Panel 5 Gb', price: 5000, image: 'https://placehold.co/100x100' },
+            6: { name: 'Panel 6 GB', price: 6000, image: 'https://placehold.co/100x100' },
+            7: { name: 'Panel 7 GB', price: 7000, image: 'https://placehold.co/100x100' },
+            8: { name: 'Panel 8 GB', price: 8000, image: 'https://placehold.co/100x100' }
         };
         
         // Toggle cart sidebar
