--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
         
         // Products data
         const products = {
-            1: { name: 'Panel 1 GB', price: 1000, image: 'https://placehold.co/100x100' },
+            1: { name: 'Panel 1 GB', price: 1000, image: 'https://files.catbox.moe/oi9bc8.png' },
             2: { name: 'Panel 2 GB', price: 2000, image: 'https://placehold.co/100x100' },
             3: { name: 'Panel 3 GB', price: 3000, image: 'https://placehold.co/100x100' },
             4: { name: 'Panel 4 GB', price: 4000, image: 'https://placehold.co/100x100' },
