--- a/index.html
+++ b/index.html
@@ -473,13 +473,13 @@
         // Products data
         const products = {
             1: { name: 'Panel 1 GB', price: 1000, image: 'https://files.catbox.moe/oi9bc8.png' },
-            2: { name: 'Panel 2 GB', price: 2000, image: 'https://placehold.co/100x100' },
-            3: { name: 'Panel 3 GB', price: 3000, image: 'https://placehold.co/100x100' },
-            4: { name: 'Panel 4 GB', price: 4000, image: 'https://placehold.co/100x100' },
-            5: { name: 'Panel 5 Gb', price: 5000, image: 'https://placehold.co/100x100' },
-            6: { name: 'Panel 6 GB', price: 6000, image: 'https://placehold.co/100x100' },
-            7: { name: 'Panel 7 GB', price: 7000, image: 'https://placehold.co/100x100' },
-            8: { name: 'Panel 8 GB', price: 8000, image: 'https://placehold.co/100x100' }
+            2: { name: 'Panel 2 GB', price: 2000, image: 'https://files.catbox.moe/oi9bc8.png' },
+            3: { name: 'Panel 3 GB', price: 3000, image: 'https://files.catbox.moe/oi9bc8.png' },
+            4: { name: 'Panel 4 GB', price: 4000, image: 'https://files.catbox.moe/oi9bc8.png' },
+            5: { name: 'Panel 5 Gb', price: 5000, image: 'https://files.catbox.moe/oi9bc8.png' },
+            6: { name: 'Panel 6 GB', price: 6000, image: 'https://files.catbox.moe/oi9bc8.png' },
+            7: { name: 'Panel 7 GB', price: 7000, image: 'https://files.catbox.moe/oi9bc8.png' },
+            8: { name: 'Panel 8 GB', price: 8000, image: 'https://files.catbox.moe/oi9bc8.png' }
         };
         
         // Toggle cart sidebar
