--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 <!-- Product 2 -->
                 <div class="product-card bg-white rounded-xl overflow-hidden shadow-md transition duration-300" data-category="aksesoris">
                     <div class="relative overflow-hidden">
-                        <img src="https://placehold.co/400x400" alt="Tas selempang mini warna hitam dengan rantai metalik dan detail hardware" class="w-full h-64 object-cover">
+                        <img src="https://files.catbox.moe/oi9bc8.png" alt="Tas selempang mini warna hitam dengan rantai metalik dan detail hardware" class="w-full h-64 object-cover">
                     </div>
                     <div class="p-5">
                         <h4 class="text-lg font-semibold text-gray-800 mb-2">Panel 2 GB</h4>
