--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 <!-- Product 1 -->
                 <div class="product-card bg-white rounded-xl overflow-hidden shadow-md transition duration-300" data-category="pakaian">
                     <div class="relative overflow-hidden">
-                        <img src="https://placehold.co/400x400" alt="Kaos lengan pendek oversized warna pastel dengan desain graphic print keren" class="w-full h-64 object-cover">
+                        <img src="https://files.catbox.moe/oi9bc8.png" alt="Kaos lengan pendek oversized warna pastel dengan desain graphic print keren" class="w-full h-64 object-cover">
                         <div class="absolute top-2 right-2 bg-pink-500 text-white text-xs px-2 py-1 rounded">New</div>
                     </div>
                     <div class="p-5">
@@ -163,7 +163,7 @@
                 <!-- Product 3 -->
                 <div class="product-card bg-white rounded-xl overflow-hidden shadow-md transition duration-300" data-category="sepatu">
                     <div class="relative overflow-hidden">
-                        <img src="https://placehold.co/400x400" alt="Sepatu sneakers putih dengan sol tebal dan aksen warna pastel" class="w-full h-64 object-cover">
+                        <img src="https://files.catbox.moe/oi9bc8.png" alt="Sepatu sneakers putih dengan sol tebal dan aksen warna pastel" class="w-full h-64 object-cover">
                         <div class="absolute top-2 right-2 bg-red-500 text-white text-xs px-2 py-1 rounded">Sale</div>
                     </div>
                     <div class="p-5">
@@ -191,7 +191,7 @@
                 <!-- Product 4 -->
                 <div class="product-card bg-white rounded-xl overflow-hidden shadow-md transition duration-300" data-category="pakaian">
                     <div class="relative overflow-hidden">
-                        <img src="https://placehold.co/400x400" alt="Celana cargo oversized warna khaki dengan banyak kantong dan tali pinggang adjuster" class="w-full h-64 object-cover">
+                        <img src="https://files.catbox.moe/oi9bc8.png" alt="Celana cargo oversized warna khaki dengan banyak kantong dan tali pinggang adjuster" class="w-full h-64 object-cover">
                     </div>
                     <div class="p-5">
                         <h4 class="text-lg font-semibold text-gray-800 mb-2">Panel 4 GB</h4>
@@ -215,7 +215,7 @@
                 <!-- Product 5 -->
                 <div class="product-card bg-white rounded-xl overflow-hidden shadow-md transition duration-300" data-category="aksesoris">
                     <div class="relative overflow-hidden">
-                        <img src="https://placehold.co/400x400" alt="Jam tangan analog dengan dial minimalis dan strap kulit berwarna coklat" class="w-full h-64 object-cover">
+                        <img src="https://files.catbox.moe/oi9bc8.png" alt="Jam tangan analog dengan dial minimalis dan strap kulit berwarna coklat" class="w-full h-64 object-cover">
                         <div class="absolute top-2 right-2 bg-yellow-500 text-white text-xs px-2 py-1 rounded">Best Seller</div>
                     </div>
                     <div class="p-5">
@@ -240,7 +240,7 @@
                 <!-- Product 6 -->
                 <div class="product-card bg-white rounded-xl overflow-hidden shadow-md transition duration-300" data-category="pakaian">
                     <div class="relative overflow-hidden">
-                        <img src="https://placehold.co/400x400" alt="Hoodie oversized warna abu-abu dengan print grafis di bagian depan" class="w-full h-64 object-cover">
+                        <img src="https://files.catbox.moe/oi9bc8.png" alt="Hoodie oversized warna abu-abu dengan print grafis di bagian depan" class="w-full h-64 object-cover">
                     </div>
                     <div class="p-5">
                         <h4 class="text-lg font-semibold text-gray-800 mb-2">Panel 6GB</h4>
@@ -264,7 +264,7 @@
                 <!-- Product 7 -->
                 <div class="product-card bg-white rounded-xl overflow-hidden shadow-md transition duration-300" data-category="sepatu">
                     <div class="relative overflow-hidden">
-                        <img src="https://placehold.co/400x400" alt="Sepatu boots kulit hitam dengan sol karet tebal dan gaya militar" class="w-full h-64 object-cover">
+                        <img src="https://files.catbox.moe/oi9bc8.png" alt="Sepatu boots kulit hitam dengan sol karet tebal dan gaya militar" class="w-full h-64 object-cover">
                     </div>
                     <div class="p-5">
                         <h4 class="text-lg font-semibold text-gray-800 mb-2">Panel 7 GB</h4>
@@ -288,7 +288,7 @@
                 <!-- Product 8 -->
                 <div class="product-card bg-white rounded-xl overflow-hidden shadow-md transition duration-300" data-category="aksesoris">
                     <div class="relative overflow-hidden">
-                        <img src="https://placehold.co/400x400" alt="Kacamata hitam dengan frame tebal berbentuk persegi dan lensa UV protection" class="w-full h-64 object-cover">
+                        <img src="https://files.catbox.moe/oi9bc8.png" alt="Kacamata hitam dengan frame tebal berbentuk persegi dan lensa UV protection" class="w-full h-64 object-cover">
                         <div class="absolute top-2 right-2 bg-green-500 text-white text-xs px-2 py-1 rounded">Limited</div>
                     </div>
                     <div class="p-5">
