--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <button class="bg-white text-indigo-600 px-6 py-3 rounded-full font-medium hover:bg-gray-100 transition duration-300">Belanja Sekarang</button>
                 </div>
                 <div class="md:w-1/2 flex justify-center">
-                    <img src="https://placehold.co/600x400" alt="Tampilan produk fashion kekinian yang sedang trendi dengan model tersenyum" class="rounded-lg shadow-xl max-w-full h-auto">
+                    <img src="https://files.catbox.moe/0fjm90.png" alt="Tampilan produk fashion kekinian yang sedang trendi dengan model tersenyum" class="rounded-lg shadow-xl max-w-full h-auto">
                 </div>
             </div>
         </div>
